# fhetest

./: .ci_lib.sh  .gitignore  .gitmodules  .scalafmt.conf  README.md  build.sbt
.github/workflows/: ci.yml
src/main/resources/additional_test/result/: comp.res
src/main/resources/additional_test/t2/: comp.t2
src/main/resources/advanced_test/arithmetic/result/: lt_test.res  ternary.res
src/main/resources/advanced_test/arithmetic/t2/: comp.t2_  lt_test.t2  ternary.t2
src/main/resources/advanced_test/binary/result/: add_mult.res  arrays.res  batching.res  bin_add_test.res  bin_mul_test.res  bin_sub_test.res  bin_test.res  bitwise.res  comp.res  lt_bin_test.res  (+5 more)
src/main/resources/basic_test/result/: add_mult_fp.res  const_ops.res  rotate.res  rotate_ckks.res
src/main/resources/basic_test/t2/: arithmetic.t2  ckks_test.t2  const_ops.t2  rotate2.t2  rotate_ckks2.t2
src/main/resources/t2/: add_mult.t2  add_mult_fp.t2  arrays.t2  rotate_ckks.t2
src/main/scala/fhetest/: Command.scala  Config.scala  LibConfig.scala  fhetest.scala  package.scala
src/main/scala/fhetest/Checker/: CheckResult.scala  ExceptionMsgKeyword.scala  ExecuteResult.scala  OpenFHEValidatorHelper.scala  Utils.scala
src/main/scala/fhetest/Generate/: AbsProgram.scala  AbsProgramGenerator.scala  AbsStatement.scala  LibConfig.scala  LibConfigDomain.scala  LibConfigGenerator.scala  T2Program.scala  Template.scala  TemplateGenerator.scala  Utils.scala  ValidFilter.scala
src/main/scala/fhetest/Phase/: Check.scala  Checker.scala  Compile.scala  Execute.scala  Generate.scala  Interp.scala  Parse.scala  Print.scala
src/main/scala/fhetest/Utils/: Utils.scala
src/test/scala/: BackendTest.scala
workspace/OpenFHE/: .gitignore  CMakeLists.txt  Makefile
workspace/OpenFHE/functional_units/: functional_units.hpp
workspace/SEAL/: .gitignore  CMakeLists.txt  Makefile  README.md
(+10 files in other folders)
